# gpx-pacer

./: .gitignore  CONTEXT.md  GEMINI.md  README.md  main.py  pyproject.toml
assets/: gpx-pacer-template.xlsx
data/: Rennsteiglauf2025_from_garmin.gpx  Rennsteiglauf2025_from_garmin_pacing.csv  Rennsteiglauf2026.gpx  Rennsteiglauf2026_from_garmin.gpx
src/cli/: main.py
src/lib/: geo_utils.py
src/model/: data.py
src/services/: activity_service.py  fit_service.py  gpx_service.py  pacer.py  surface_geometry.py  surface_matching.py  surface_normalization.py  surface_overpass.py  surface_service.py
tests/: conftest.py
tests/data/: sample.gpx  sample_recording.gpx
tests/integration/: test_cli_analysis.py  test_cli_distance.py  test_cli_waypoint.py
tests/unit/: test_activity_service.py  test_analysis_mode.py  test_csv_headers.py  test_geo_utils.py  test_gpx_service.py  test_json_output.py  test_pacer_distance.py  test_pacer_waypoint.py  test_surface_geometry.py  test_surface_matching.py  test_surface_overpass.py  test_surface_service.py
