[project]
name = "gpx-pacer"
version = "0.1.0"
description = "A tool to create pacing plans from GPX files"
authors = [{name = "User", email = "user@example.com"}]
dependencies = [
    "gpxpy>=1.6.2",
]
requires-python = ">=3.12"

[project.scripts]
gpx-pacer = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
