[project]
name = "gpx-pacer"
version = "0.2.0"
description = "A tool to create pacing plans from GPX files"
authors = [{name = "User", email = "user@example.com"}]
dependencies = [
    "fitdecode>=0.11.0",
    "gpxpy>=1.6.2",
    "pyproj>=3.7.2",
    "requests>=2.34.0",
    "shapely>=2.1.2",
]
requires-python = ">=3.12"

[project.scripts]
gpx-pacer = "src.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
